1) fixed frame border color 2) fixed check button color 3) added flowbox. now flowbox child gets highlighted upon selection 4) fixed overlay background 5) fixed radio,check spacing issue in menu and popover 6) fixed radio inactive color

--- a/scss/gtk-3.0/widgets/_check.scss
+++ b/scss/gtk-3.0/widgets/_check.scss
@@ -3,8 +3,8 @@
 check {
   -gtk-icon-source: -gtk-recolor(url('../assets/symbolic/check.symbolic.png'));
   -gtk-icon-transform: scale(0);
-  color: colors.$white-strongest;
-  border: 0.2em solid colors.$white-weakest;
+  color: colors.$black-strong;
+  border: 0.2em solid colors.$black-weak;
   border-radius: 0.2em;
   padding: 0.1em;
   min-width: 0.7em;
