--- a/scss/gtk-3.0/widgets/_overlay.scss
+++ b/scss/gtk-3.0/widgets/_overlay.scss
@@ -3,7 +3,7 @@
 overlay {
 	revealer {
 		box {
-			background: colors.$surface-weakest;
+//			background: colors.$surface-weakest;
 			padding: 0.3em 0.1em 0.3em 0.3em;
 	}
  }
